cloud-infra-macros/tests/fails/memory_too_low.stderr
error: value should be at least 128
 --> tests/fails/memory_too_low.rs:4:23
  |
4 |     let mem = memory!(64);
  |                       ^^
